🐛 Fixed hidden scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ input {
 }
 
 .scrollbar-y::-webkit-scrollbar {
-  width: 20px;
+  width: 12px;
 }
 
 .scrollbar-x::-webkit-scrollbar {
